Corrigindo o uso do enconder de base64